# open-playlist-engine

./: .env.example  .gitignore  PRODUCT.md  README.md  docker-compose.yml  example.txt
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py  settings.py
backend/app/api/: auth.py  dependencies.py  exports.py  generator.py  imports.py  library.py  migrations.py  organizer.py  owner_session.py  playlists.py  providers.py  shares.py  snapshots.py  syncs.py
backend/app/core/: __init__.py  adapter.py  capabilities.py  generator.py  library_match.py  (+16 more)
backend/migrations/: env.py
backend/tests/: conftest.py  test_account_scope.py  test_chunked_writes.py  test_credentials.py  test_export_api.py  test_export_history.py  test_export_serializers.py  test_export_service.py  test_generator_api.py  test_generator_confirmation.py  test_generator_core.py  test_health.py  test_import_api.py  test_import_migration.py  test_import_service.py  test_import_urls.py  test_library_api.py  test_library_job.py  test_library_match.py  test_liked_collection_routing.py  test_local_import_api.py  test_local_import_migration.py  test_local_import_parsers.py  test_match.py  test_migration_history.py  test_migration_reports.py  test_migration_state.py  test_migration_stats.py  test_models.py  test_organizer.py  test_owned_credentials.py  test_owner_session.py  test_playlist_annotations.py  test_recipient_import.py  test_registry.py  test_repositories.py  test_review_skip.py  test_safe_http.py  test_session_security.py  test_share_log_redaction.py  (+13 more)
(+167 files in other folders)
