[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-playlist-engine-backend"
version = "0.1.0"
description = "Any-to-any music playlist migration engine (backend)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "psycopg[binary]>=3.2",
    "alembic>=1.14",
    "arq>=0.26",
    "httpx>=0.27",
    "cryptography>=43",
    "defusedxml>=0.7.1",
    "ijson>=3.4",
    "PyJWT>=2.10",
    "ytmusicapi>=1.12.1",
]

[project.optional-dependencies]
dev = [
    "aiosqlite>=0.20",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
